Fix hidden content scrollbar

--- a/app/styles/_default.scss
+++ b/app/styles/_default.scss
@@ -31,3 +31,8 @@ form .with-errors .error a {
 body > .ember-view {
   height: 100%;
 }
+
+.as-scrollable {
+  width: 100%;
+  height: 100%;
+}
