--- a/app/styles/_paint-settings.scss
+++ b/app/styles/_paint-settings.scss
@@ -12,7 +12,7 @@ $layout-sidebar-nav-icons:
   bar-chart,
   search;
 
-$layout-sidebar-nav-list-selector: '> div > .content > ul';
+$layout-sidebar-nav-list-selector: '.tse-content > ul';
 $layout-sidebar-footer-avatar-selector: '.picture';
 $layout-sidebar-footer-actions-selector: '.toggle-actions';
 
